# monkeys-together-strong

./: README.md
backend/: .env  .env.development  .env.production  .env.testing  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  games.py  genres.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  auth.py  game.py  genre.py  links.py  user.py
backend/app/persistence/: game_crud.py  genre_crud.py  user_crud.py
backend/app/utils/: date.py
backend/data/: dev.db
backend/tests/: conftest.py
backend/tests/api/routes/: test_games.py
backend/tests/persistence/: test_game_crud.py  test_user_crud.py
mobile-app/: .env.development  .env.production  capacitor.config.ts  cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
mobile-app/src/: main.ts  vite-env.d.ts
mobile-app/src/components/: ExploreContainer.vue  GameList.vue  GameListAdvance.vue  GenreList.vue  GetStarted.vue  LoginForm.vue  PreferencesSelection.vue  SignupForm.vue  handleError.ts
mobile-app/src/config/: index.ts
mobile-app/src/mocks/: index.ts  setupApiMocks.ts
mobile-app/src/router/: index.ts
mobile-app/src/services/: api.ts  preferences.ts
mobile-app/src/theme/: tailwind.css
mobile-app/src/types/: auth.ts  error.ts  game.ts  genre.ts  genres.ts  index.ts  user.ts
mobile-app/src/utils/: games.ts  (+4 more)
pec1-demo/: .gitignore  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  vite.config.ts
(+47 files in other folders)
