[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["soblechero <1702798+soblechero@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = "^0.30.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.2.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
igdb-api-v4 = "^0.3.2"
howlongtobeatpy = "^1.0.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
types-passlib = "^1.7.7.20240327"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
